--- a/bookstoreui/style.css
+++ b/bookstoreui/style.css
@@ -93,8 +93,8 @@ audio,
 canvas,
 video {
 	display: inline-block;
-	*display: inline;
-	*zoom: 1;
+	display: inline;
+	zoom: 1;
 	max-width: 100%;
 }
 
